6. Кодировка. [#862]